# ghosty

./: CMakeLists.txt  Ghostylevel.tiled-session  LICENSE.md  README.md
data/Config/: audio_config.json  collectibles_config.json  enemy_config_dino.json  enemy_config_ghost.json  enemy_config_skeleton.json  enemy_config_vampire.json  game_config.json  player_animations.json  player_config_mage.json
data/Levels/: NES - Ghosts n Goblins - Stage 1.tsx  demo.tmx  test.tmx  testtileset.tsx  testtileset2.tsx
data/Levels/Level1/: Background.tsx  Level1.tmx  groundTileSet.tsx  items_tileset.tsx  pit_tiles.tsx  tileset_clear_tiles.tsx  tileset_dark_tiles.tsx
include/Core/: AssetManager.h  AudioManager.h  AudioTypes.h  Game.h  Level.h  World.h
include/Gameplay/: Attack.h  Collider.h  CollisionManager.h  Collisionable.h  Entity.h  EntityLife.h  GameObject.h  Player.h  PlayerFactory.h  ProjectileAttack.h  RangedAttack.h
include/Gameplay/AttackSystem/: Attack.h  MeleeAttack.h  Projectile.h  RangedAttack.h
include/Gameplay/Collectibles/: Collectible.h  CollectibleFactory.h  CollectibleManager.h  CollectibleType.h
include/Gameplay/Collisions/: Collider.h  CollisionManager.h  Collisionable.h  HitCollider.h
include/Gameplay/Enemy/: DinoEnemy.h  Enemy.h  EnemyFactory.h  EnemyManager.h  EnemyType.h  FlyingEnemy.h  GhostEnemy.h  SkeletonEnemy.h  StaticEnemy.h  VampireEnemy.h  WalkingEnemy.h  Zombie.h
include/Gameplay/Player/: Player.h  PlayerFactory.h
include/Render/: Animation.h  AnimationLoader.h  AnimationType.h  AttackAnimation.h  AttackAnimationType.h  Chunk.h  MapLayer.h  ObjectLayer.h  SFMLOrthogonalLayer.h
include/UI/: HUD.h  UIManager.h  UIScreen.h  UIScreenGameOver.h  UIScreenMainMenu.h  UIScreenPlaying.h  UIScreenStaticBackground.h
include/Utils/: Constants.h  GameConfigLoader.h  ObjectPool.h
scripts/: build.bat  generate.bat
src/: main.cpp
src/Core/: AssetManager.cpp  AudioManager.cpp  Game.cpp  Level.cpp  World.cpp
src/Gameplay/: Collider.cpp  CollisionManager.cpp  Collisionable.cpp  Entity.cpp  EntityLife.cpp  Player.cpp  PlayerFactory.cpp  ProjectileAttack.cpp  RangedAttack.cpp
src/Gameplay/AttackSystem/: MeleeAttack.cpp  Projectile.cpp  RangedAttack.cpp
src/Gameplay/Collectibles/: Collectible.cpp  CollectibleFactory.cpp  CollectibleManager.cpp
src/Gameplay/Collisions/: Collider.cpp  CollisionManager.cpp  Collisionable.cpp
src/Gameplay/Enemy/: DinoEnemy.cpp  Enemy.cpp  EnemyFactory.cpp  EnemyManager.cpp  FlyingEnemy.cpp  GhostEnemy.cpp  SkeletonEnemy.cpp  StaticEnemy.cpp  VampireEnemy.cpp  WalkingEnemy.cpp  Zombie.cpp
src/Gameplay/Player/: Player.cpp  PlayerFactory.cpp
src/Render/: Animation.cpp  AnimationLoader.cpp  AttackAnimation.cpp  Chunk.cpp  MapLayer.cpp  ObjectLayer.cpp
src/UI/: HUD.cpp  UIManager.cpp  UIScreenGameOver.cpp  UIScreenMainMenu.cpp  UIScreenPlaying.cpp  UIScreenStaticBackground.cpp
src/Utils/: GameConfigLoader.cpp
